# freecamper

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
freecamper_crawler/: scrapy.cfg
freecamper_crawler/freecamper_crawler/: items.py  middlewares.py  pipelines.py  settings.py
freecamper_crawler/freecamper_crawler/spiders/: default_spider.py  nyp_spider.py
freecamper_crawler/tests/: test_nyp_spider_parsers.py
freecamper_crawler/tests/page_samples/album/: 1_track_album.html  8_track_album.html
