[tool.poetry]
name = "freecamper"
version = "0.1.0"
description = "'Name Your Price' & CC releases Bandcamp crawler"
authors = ["Simon Weiss <wonder@simonweiss.space>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
